[package]
name = "rf-fetch"
version = "1.0.0"
authors = ["lyiriyah"]
edition = "2018"
description = "Horribly written fetch"
license-file = "LICENSE"
homepage = "https://github.com/lyiriyah/rf"
repository = "https://github.com/lyiriyah/rf"
readme = "README.md"
keywords = ["fetch"]
categories = ["command-line-utilities"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "^1.0.0"
passwd = "^0.0.1"
colored = "^2.0.0"
raw-cpuid = "^9.0.0"
regex = "^1.0.0"
sys-info = "^0.9"
